finally fixed footer alignemnts

--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,34 @@ footer {
     margin-top: 0px;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+}
+footer ul {
+    /* footer columns */
+    list-style: none;
+    margin: 0;
+    padding: 5px;
+}
+footer ul li {
+    color: #888;
+    text-align: center;
+    align-items: center;
+}
+footer ul li ul {
+    /* tools */
+    list-style: none;
+    margin: 5px 0 0 0;
+    padding 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+footer ul li a {
+    color: #888;
 }
 a {
     color: #f2b345;
@@ -148,22 +176,6 @@ pre {
     border-width: 2px;
     font-size: 1.3em;
     /*overflow: auto;*/
-}
-footer ul {
-    list-style-type: none;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0;
-    overflow: hidden;
-}
-footer ul li {
-    float: left;
-    color: #888;
-    text-align: center;
-    padding: 5px 8px;
-}
-footer ul li a {
-    color: #888;
 }
 img {
     max-width: 100%;
